--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ absl-py==0.6.1
 appnope==0.1.0
 astor==0.7.1
 backports-abc==0.5
+backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
 backports.weakref==1.0.post1
 certifi==2018.11.29
+cycler==0.10.0
 decorator==4.3.0
 enum34==1.1.6
 funcsigs==1.0.2
@@ -19,7 +21,9 @@ jupyter-client==5.2.4
 jupyter-core==4.4.0
 Keras-Applications==1.0.6
 Keras-Preprocessing==1.0.5
+kiwisolver==1.0.1
 Markdown==3.0.1
+matplotlib==2.2.3
 mock==2.0.0
 numpy==1.15.4
 pathlib2==2.3.3
@@ -31,13 +35,16 @@ prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
 Pygments==2.3.1
+pyparsing==2.3.0
 python-dateutil==2.7.5
+pytz==2018.7
 pyzmq==17.1.2
 scandir==1.9.0
 scipy==1.2.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.12.0
+subprocess32==3.5.3
 tensorboard==1.12.1
 tensorflow==1.12.0
 termcolor==1.1.0
