--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,67 @@
 absl-py==0.6.1
 appnope==0.1.0
 astor==0.7.1
+attrs==18.2.0
 backports-abc==0.5
 backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
 backports.weakref==1.0.post1
+bayesian-optimization==1.0.0
+bleach==3.0.2
 certifi==2018.11.29
+configparser==3.5.0
 cycler==0.10.0
 decorator==4.3.0
+entrypoints==0.2.3
 enum34==1.1.6
 funcsigs==1.0.2
+functools32==3.2.3.post2
 futures==3.2.0
 gast==0.2.0
 grpcio==1.17.1
 h5py==2.9.0
+ipaddress==1.0.22
 ipykernel==4.10.0
 ipython==5.8.0
 ipython-genutils==0.2.0
+Jinja2==2.10
+jsonschema==3.0.0a3
 jupyter-client==5.2.4
 jupyter-core==4.4.0
+jupyterlab==0.33.12
+jupyterlab-launcher==0.11.2
 Keras-Applications==1.0.6
 Keras-Preprocessing==1.0.5
 kiwisolver==1.0.1
 Markdown==3.0.1
+MarkupSafe==1.1.0
 matplotlib==2.2.3
+mistune==0.8.4
 mock==2.0.0
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.7.4
 numpy==1.15.4
+pandocfilters==1.4.2
 pathlib2==2.3.3
 pbr==5.1.1
 pexpect==4.6.0
 pickleshare==0.7.5
 Pillow==5.3.0
+prometheus-client==0.5.0
 prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
 Pygments==2.3.1
 pyparsing==2.3.0
+pyrsistent==0.14.8
 python-dateutil==2.7.5
 pytz==2018.7
 pyzmq==17.1.2
 scandir==1.9.0
+scikit-learn==0.20.2
 scipy==1.2.0
+Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.12.0
@@ -48,9 +69,12 @@ subprocess32==3.5.3
 tensorboard==1.12.1
 tensorflow==1.12.0
 termcolor==1.1.0
+terminado==0.8.1
+testpath==0.4.2
 torch==1.0.0
 torchvision==0.2.1
 tornado==5.1.1
 traitlets==4.3.2
 wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.14.1
